--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,9 @@
-# Environment variables
-.env
-
-# Telegram session files
-*.session
-*.session-journal
-
 # Python
 __pycache__/
 *.py[cod]
 *$py.class
 *.so
 .Python
-env/
-venv/
-ENV/
 build/
 develop-eggs/
 dist/
@@ -30,6 +20,21 @@ wheels/
 .installed.cfg
 *.egg
 
+# Virtual Environment
+venv/
+ENV/
+env/
+.venv
+argos_data/
+
+# Environment variables
+.env
+.env.local
+
+# Telegram session files
+*.session
+*.session-journal
+
 # IDE
 .vscode/
 .idea/
@@ -37,3 +42,12 @@ wheels/
 *.swo
 *~
 
+# OS
+.DS_Store
+Thumbs.db
+
+# PyInstaller
+*.spec
+
+# Logs
+*.log
